--- a/Public/about.html
+++ b/Public/about.html
@@ -7,8 +7,7 @@
     <title>Sermons by Redeemed Pastors and overseers</title>
 
 
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/footer.css">
 
@@ -29,7 +28,7 @@
       <div class="nav-items">
          <li><a href="index.html">Home</a></li>
          <li><a href="#">About</a></li>
-         <li><a href="sermons.html">Sermons</a></li>
+         <li><a href="sermon.html">Sermons</a></li>
          <li><a href="Contact.html">contact us</a></li>
          <li><a href="give.htm">Give Online</a></li>
          <li><a href="event.html">Events</a></li>
@@ -41,32 +40,66 @@
    <!-- end of navbar-->
      <script src="js/nav.js"></script>
 
-      <!--Main content-->
-      <section class="home" id="home">
-        <div class="max-width">
-          <div class="home-content">
-            <!-- <div class="text-1">Welcome to The</div> -->
-            <div class="text-2">Redeemed People's Mission Inc</div>
-            <div class="text-3">Preaching the Whole Word to<span> the Whole </span>World</div>
-            <a href="#">RPM TV</a>
-          </div>
-        </div>
-      </section>
-
-    <!--About section  -->
-    <section class="about" id="about">
+    <!--About background  -->
+    <section class="home" id="home">
       <div class="max-width">
-          <div class="about-content">
-              <div class="column left">
-                  <img src="./img/Daddy.jpg" alt="">
-              </div>
-              <div class="column right">
-                <div class="text">The Redeemed People's Mission Inc<class class="typing-2"></class> </div>
-                <p>a 400 level student of computer and communications enginerinf ATBU Bauchi.  I am a front end developer. I can do a beautiful landing page for your company. </p>
-            </div>
-          </div>
+        <div class="home-content">
+          <!-- <div class="text-1">Welcome to The</div> -->
+          <div class="text-2">About Us</div>
+          <hr>
+          <div class="text-3">Redeemed People's Mission Inc</div>
+        </div>
       </div>
-  </section>
+    </section>
+    
+
+<!--about main content-->
+    <section>
+      <div class="container_about">
+        <div class="header_about">
+          <h3>Rev. N.C. Thompson</h3>
+        </div>
+        <div class="body">
+          <p>Rev. N.C. Thompson was born on the 9th of October 1949 in Ahiauku Olokoro Umuahia in Abia State.
+            It was at the end of the war that he had an encounter with Jesus Christ as his Lord and Savior.
+            This event changed the course of his life and put him in the path of destiny that only God had mapped out for him.
+            He wrote Journey into Destiny as his autobiography, the lessons he learnt on his way to becoming a Christian leader.
+          </p>
+          <p>
+            He is the Founder and General Overseer of Redeemed People's Mission Inc., as well as its associated educational institutions 
+            Redeemed People's Academy and Redeemed People's Theological College.He is the Patron of the Pentecostal Fellowship of Nigeria,
+            Plateau State, Nigeria. Rev. Thompson ministers regularly in churches in the UK and the U.S. 
+            His weekly Television Programme, Divine Encounter, enjoys wide viewership in Nigeria.
+            He is married to Dr. Glenda Thompson and they are blessed with three children, and nine grandchildren.
+          </p>
+        </div>
+        <div class="header">
+          <h3>OUR VISION</h3>
+        </div>
+        <div class="body">
+          <p>To grow a global through practical demonstration of the word and power of God,
+            to  make everyone complete in Christ.
+          </p>
+        </div>
+        <div class="header">
+          <h3>OUR MISSION</h3>
+        </div>
+        <div class="body">
+          <p>
+            To communicate God's word in the power of the Holy Spirit to the world through Church ministry, eductional institudes, media and cross culture missions
+          </p>
+        </div>
+        <div class="header">
+          <h3>OUR MOTTO</h3>
+        </div>
+        <div class="body">
+          <p>
+            THE WHOLE WORD TO THE WHOLE WORLD.
+          </p>
+        </div>
+      </div>
+    </section>
+    
       <script src="home.js"></script>
       <!-- footer section-->
       <footer></footer>
