--- a/Public/contact.html
+++ b/Public/contact.html
@@ -35,7 +35,7 @@
         <div class="nav-items">
            <li><a href="index.html">Home</a></li>
            <li><a href="about.html">About</a></li>
-           <li><a href="sermons.html">Sermons</a></li>
+           <li><a href="sermon.html">Sermons</a></li>
            <li><a href="#">contact us</a></li>
            <li><a href="give.htm">Give Online</a></li>
            <li><a href="event.html">Events</a></li>
@@ -67,20 +67,20 @@
                         <div class="row">
                             <i class="fas fa-church"></i>
                             <div class="info">
-                                <div class="sub-title">RPM Jos</div>
+                                <div class="sub-title">RPM Natona HQ Jos</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Bauchi, Nigeria</div>
+                                <!-- <div class="head">Address</div> -->
+                                <div class="sub-title">Joseph Gomwalk Road, near Hill Station Junction</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
-                                <div class="head">Email</div>
+                                <!-- <div class="head">Email</div> -->
                                 <div class="sub-title">rpmincde@gmail.com</div>
                             </div>
                         </div>
